2008-03-14  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (append_keys_to_tree_from_file):
	remove debugging output

2008-02-02  Luca Ferretti  <elle.uca@libero.it>

	reviewed by: Jens Granseuer <jensgr@gmx.net>

	* 00-multimedia-key.xml.in:
	* 01-desktop-key.xml.in:
	Move Launch Calculator to Desktop group and sort
	all launch_app keybing together (Closes: #513867)

2007-10-31  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Distcheck fixes.

2007-08-05  Bastien Nocera  <hadess@hadess.net>

	reviewed by: Jens Granseuer <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (keyval_is_forbidden),
	(accel_edited_callback): Make the arrows and tabs unbindable
	without a modifier (Closes: #463433)

2007-06-14  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (setup_dialog): fix GConf
	notification

2007-05-02  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (main): add g_thread_init as
	required by glib

2007-05-02  Bastien Nocera  <hadess@hadess.net>

	* gnome-keybindings.pc.in: Fix keysdir substitution, as
	reported by Christian Persch <chpe@svn.gnome.org>
	(Closes: #434591)

2007-04-30  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: upd
	* gnome-keybindings.pc.in: add a noarch pkgconfig file to allow
	applications to know where to add their keybindings
	(Closes: #434591)

2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* keybinding.desktop.in.in: renamed Bugzilla product.

2007-04-05  Bastien Nocera  <hadess@hadess.net>

	* 50-metacity-desktop-key.xml.in:
	* 50-metacity-key.xml.in:
	* Makefile.am: Remove the metacity keybindings definitions, they're
	in metacity now

2007-03-21  Bastien Nocera  <hadess@hadess.net>

	* gnome-keybinding-properties.c: (reload_key_entries):
	Prepend the directory name before loading the files, otherwise, we're
	loading them from the current directory, spotted by Fernando Herrera
	<fherrera@onirica.com> (Closes: #420796)
